--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -78,13 +78,13 @@
                     </div>
                 </div>
             </div>
-            <div class="row align-items-center justify-content-between">
+            <div class="row align-items-center justify-content-between ">
                 @foreach(var cat in Model){
                     <div class="col-lg-6 col-sm-6">
                     <div class="single_feature_post_text">
-                        <p>Latest @cat.Name</p>
-                        <h3>@cat.Description</h3>
-                        <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
+                        <h3>Latest @cat.Name</h3>
+                        <p>Click to display products list</p>
+                        <a asp-action="Index" asp-controller="Products" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
                         <img src="/assets/img/category/@cat.Img" alt="">
                     </div>
                     </div>
