--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -24,6 +24,10 @@
     <link rel="stylesheet" href="/css/slick.css" />
     <!-- style CSS -->
     <link rel="stylesheet" href="/css/style.css" />
+
+    <link rel="stylesheet" href="/css/newcard.css" />
+
+
 </head>
 
 <body>
