--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -3665,13 +3665,13 @@ ul {
 }
 
 /* line 425, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_product.scss */
-.product_top_bar .single_product_menu .nice-select {
+/*.product_top_bar .single_product_menu .nice-select {
   height: 0;
   border: 0px;
   line-height: 15px;
   font-weight: 300;
   text-transform: capitalize;
-}
+}*/
 
 /* line 432, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_product.scss */
 .product_top_bar .single_product_menu .nice-select:after {
