--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -306,7 +306,7 @@
 
                 <div class="modal-footer">
                     <button style='width:fit-content ' type="button" class="btn_2 " data-dismiss="modal">Close</button>
-                    <button style='width:fit-content' type="button" class="btn_2 ">Check out</button>
+                    <button onclick="CheckOut()" style='width:fit-content' type="button" class="btn_2 ">Check out</button>
                 </div>
                 </div>
             </div>
@@ -473,6 +473,7 @@
     <script src="/js/custom.js"></script>
       <!-- cart js -->
     <script src="/js/Cart.js"></script>
+
      <!-- icon js -->
      <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     @RenderSection("Scripts",required:false)
