--- a/Views/Orders/Details.cshtml
+++ b/Views/Orders/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Project.Models.Order
+﻿@model Order
 
 @{
     ViewData["Title"] = "Details";
@@ -20,19 +20,19 @@
       </div>
     </section>
 
-<div class="container mt-4">
+<div class="container mt-4 mb-4">
     <div class="row">
         <div class="col-12">
             <div class="card">
                 <div class="card-body p-0">
                     <div class="row p-5">
                         <div class="col-md-6">
-                            <img src="http://via.placeholder.com/400x90?text=logo">
+                            <img src="/assets/img/client_logo/client_logo_2.png" alt="" />
                         </div>
 
                         <div class="col-md-6 text-right">
-                            <p class="font-weight-bold mb-1">Invoice #550</p>
-                            <p class="text-muted">Due to: 4 Dec, 2019</p>
+                            <p class="font-weight-bold mb-1">Invoice @Model.OrderNumber</p>
+                            <p class="text-muted">Order Date to: @Model.OrderDate</p>
                         </div>
                     </div>
 
@@ -41,9 +41,9 @@
                     <div class="row pb-5 p-5">
                         <div class="col-md-6">
                             <p class="font-weight-bold mb-4">Client Information</p>
-                            <p class="mb-1">John Doe, Mrs Emma Downson</p>
+                            <p class="mb-1">@Model.Customer.UserName</p>
                             <p>Acme Inc</p>
-                            <p class="mb-1">Berlin, Germany</p>
+                            <p class="mb-1">@Model.Customer.Address</p>
                             <p class="mb-1">6781 45P</p>
                         </div>
 
@@ -52,7 +52,7 @@
                             <p class="mb-1"><span class="text-muted">VAT: </span> 1425782</p>
                             <p class="mb-1"><span class="text-muted">VAT ID: </span> 10253642</p>
                             <p class="mb-1"><span class="text-muted">Payment Type: </span> Root</p>
-                            <p class="mb-1"><span class="text-muted">Name: </span> John Doe</p>
+                            <p class="mb-1"><span class="text-muted">Name: </span> @Model.Customer.UserName</p>
                         </div>
                     </div>
 
@@ -70,30 +70,17 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    @foreach (var item in @Model.OrderDetails)
+                                   {
                                     <tr>
-                                        <td>1</td>
-                                        <td>Software</td>
-                                        <td>LTS Versions</td>
-                                        <td>21</td>
-                                        <td>$321</td>
-                                        <td>$3452</td>
+                                        <td>@item.ProductID</td>
+                                        <td>@item.Product.Name</td>
+                                        <td>@item.Product.Description</td>
+                                        <td>@item.Quantity</td>
+                                        <td>$@item.Product.UnitPrice</td>
+                                        <td>$@item.LinePrice</td>
                                     </tr>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Software</td>
-                                        <td>Support</td>
-                                        <td>234</td>
-                                        <td>$6356</td>
-                                        <td>$23423</td>
-                                    </tr>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Software</td>
-                                        <td>Sofware Collection</td>
-                                        <td>4534</td>
-                                        <td>$354</td>
-                                        <td>$23434</td>
-                                    </tr>
+                                   }
                                 </tbody>
                             </table>
                         </div>
@@ -102,24 +89,21 @@
                     <div class="d-flex flex-row-reverse bg-dark text-white p-4">
                         <div class="py-3 px-5 text-right">
                             <div class="mb-2">Grand Total</div>
-                            <div class="h2 font-weight-light">$234,234</div>
+                            <div class="h2 font-weight-light">$@Model.TotalPrice</div>
                         </div>
 
                         <div class="py-3 px-5 text-right">
                             <div class="mb-2">Discount</div>
-                            <div class="h2 font-weight-light">10%</div>
+                            <div class="h2 font-weight-light">@Model.Discount%</div>
                         </div>
 
                         <div class="py-3 px-5 text-right">
                             <div class="mb-2">Sub - Total amount</div>
-                            <div class="h2 font-weight-light">$32,432</div>
+                            <div class="h2 font-weight-light">$@Model.SubTotal</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
-    <div class="text-light mt-5 mb-5 text-center small">by : <a class="text-light" target="_blank" href="http://totoprayogo.com">totoprayogo.com</a></div>
-
 </div>
