--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -190,7 +190,7 @@
      
 
     <!-- product_list part start-->
-    <section class="product_list best_seller">
+    <section class="product_list best_seller mt-4">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-12">
