--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row align-items-center justify-content-evenly m-auto">
+            <div class="row align-items-center justify-content-evenly m-auto mb-4">
                 @foreach(var cat in Model){
                    @* <div class="col-lg-6 col-sm-6">
                     <div class="single_feature_post_text">
