--- a/Views/Products/CategoryFilter.cshtml
+++ b/Views/Products/CategoryFilter.cshtml
@@ -6,14 +6,40 @@
 @*     product section*@
 @foreach (var item in Model)
 {
-                        
-        <div class="single_product_item col-4">
+
+    <div class="single_product_item col-4">
         <img src="/assets/img/product/@item.Img" alt="">
         <div class="single_product_text">
             <h4>@item.Name</h4>
             <h3>@item.UnitPrice</h3>
-                <a   onclick="AddTOcart('@item.ID','@item.Name','@item.UnitPrice','@item.Img')"  name='@item.ID' class="add_cart">+ add to cart<i class="ti-heart"></i></a>
+            <a onclick="AddTOcart('@item.ID','@item.Name','@item.UnitPrice','@item.Img')" name='@item.ID' class="add_cart">+ add to cart<i class="ti-heart"></i></a>
         </div>
     </div>
 }
+
+
+<div class="col-lg-12">
+    <div class="pageination">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <i class="fa fa-angle-double-left"></i>
+                    </a>
+                </li>
+
+                @for (int i = 0, k = 1; i < ViewBag.NumberOfPages; k++, i++)
+                {
+                    <li class="page-item"><a class="page-link" asp-action="CategoryFilterHome" asp-controller="products" asp-route-id=@Model[0].CategoryID asp-route-page=@i> @k</a></li>
+                }
+
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <i class=" fa fa-angle-double-right"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</div>
 
