--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -247,7 +247,7 @@
             <div class="col-lg-6">
               <div class="review_box">
                 <h4>Post a comment</h4>
-                <form class="row contact_form" action="contact_process.php" method="post" id="contactForm"
+                <form class="row contact_form"  method="post" id="contactForm"
                   novalidate="novalidate">
                   <div class="col-md-12">
                     <div class="form-group">
@@ -271,7 +271,7 @@
                     </div>
                   </div>
                   <div class="col-md-12 text-right">
-                    <button type="submit" value="submit" class="btn_3">
+                    <button   class="btn_3">
                       Submit Now
                     </button>
                   </div>
