--- a/Views/Categories/Delete.cshtml
+++ b/Views/Categories/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+@*<h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -42,4 +42,28 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
+</div>*@
+
+
+
+
+
+<h1 class="text-danger">Delete</h1>
+
+<h3 class="text-secondary">Are you sure you want to delete this Category?</h3>
+    <hr />
+    <div class="card" style="width: 100%;">
+  <img class="card-img-top" src="/assets/img/category/@Model.Img" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">@Model.Name</h5>
+    <p class="card-text">@Model.Description</p>
+  </div>
 </div>
+
+
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="ID" />
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    </form>
