--- a/Views/Products/Delete.cshtml
+++ b/Views/Products/Delete.cshtml
@@ -2,69 +2,34 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "_CreateLayout";
+    //Layout = "_CreateLayout";
 }
 
-<h1>Delete</h1>
+<h1 class="text-danger">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Product</h4>
+<h3 class="text-secondary">Are you sure you want to delete this Product?</h3>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Color)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UnitPrice)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UnitPrice)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Discount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Discount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Img)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Img)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.ID)
-        </dd class>
-    </dl>
+    <div class="card" style="width: 100%;">
+  <img class="card-img-top" src="/assets/img/product/@Model.Img" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">@Model.Name</h5>
+    <p class="card-text">@Model.Description</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Rate = @Model.Rate</li>
+    <li class="list-group-item">Unite Price = @Model.UnitPrice</li>
+
+    <li class="list-group-item">Discount = @Model.Discount</li>
+    <li class="list-group-item">Color = @Model.Color</li>
+  </ul>
+</div>
+
+
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="Index">Back to List</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
     </form>
-</div>
+  
+
