--- a/Views/Products/List.cshtml
+++ b/Views/Products/List.cshtml
@@ -60,7 +60,7 @@
 					<div class="visit">
                         <a asp-action="Edit" asp-controller="Products" asp-route-id="@item.ID"><i class="fa-solid fa-pen-to-square" style="font-size:20px"></i></a>&nbsp;|&nbsp;
                         <a asp-action="Details" asp-controller="Products" asp-route-id="@item.ID"><i class="fa-solid fa-circle-info" style="font-size:20px"></i></a>&nbsp;|&nbsp;
-                        <a asp-action="Delete" asp-controller="Products" asp-route-id="@item.ID"><i class="fa-solid fa-trash-can" style="font-size:20px"></i></a>
+                        <button type="button" class="border-0" onclick="whenClick(@item.ID)"  data-toggle="modal" data-target="#exampleModal"><i class="fa-solid fa-trash-can" style="font-size:20px" ></i></button>
                     </div>
 				</div>
                 }
@@ -70,3 +70,32 @@
     </div>
 </div>
 
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete Product</h5>
+        <button type="button" class="close border-0" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        
+      </div>
+    </div>
+  </div>
+
+@*    <script src="~/lib/jquery/dist/jquery.js"></script>*@
+</div>
+<script>
+function whenClick(id){
+$.ajax({
+url:"/products/getdelete/"+id,
+success: function(result){
+console.log(result)
+$(".modal-body").html(result)
+}
+});
+}
+</script>
