--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -9,7 +9,7 @@
 <div class="container ">
 	<h1 class="l font-italic text-muted">Edit Category</h1>
 	<div class="section-top-border">
-		<div class=" row">
+		<div class=" row justify-content-center">
 			<div class="col-lg-8 col-md-8">
 				<form asp-action="Edit" enctype="multipart/form-data">
 					<div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -46,7 +46,7 @@
 							<input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
 						</label>
 					</div>
-					<div class="form-group">
+					<div class="form-group text-center">
 						<input type="submit" value="Create" class="btn btn-primary" />
 						<a asp-action="Index" class="btn btn-danger">Back to List</a>
 					</div>
