--- a/Views/Categories/List.cshtml
+++ b/Views/Categories/List.cshtml
@@ -23,13 +23,11 @@
         <div class="progress-table-wrap">
 			<div class="progress-table">
 				<div class="table-head">
-                    <div class="d-flex col-12">
-					<div class="serial col-1">#</div>
-					<div class="country col-3">Name</div>
-					<div class="country col-3">Image</div>
-					<div class="country col-3">Is Active</div>
-					<div class="country c0l-3">Cotrols</div>
-                    </div>
+					<div class="serial">#</div>
+					<div class="country">Name</div>
+					<div class="country">Image</div>
+					<div class="country">Is Active</div>
+					<div class="country">Cotrols</div>
 				</div>
                 <div class="table-body">
                 @foreach (var item in Model) {
@@ -43,9 +41,9 @@
                             <img src="/assets/img/category/@item.Img" alt="img">
                     </div>
                     <div class="country">@item.IsActive</div>
-					<div class="visit">
+					<div class="country">
                         <a asp-action="Edit" asp-controller="Categories" asp-route-id="@item.ID"><i class="fa-solid fa-pen-to-square" style="font-size:20px"></i></a>&nbsp;|&nbsp;
-                        <a asp-action="Details" asp-controller="Categories" asp-route-id="@item.ID"><i class="fa-solid fa-circle-info" style="font-size:20px"></i></a>&nbsp;|&nbsp;
+                        <a asp-action="AdminDetails" asp-controller="Categories" asp-route-id="@item.ID"><i class="fa-solid fa-circle-info" style="font-size:20px"></i></a>&nbsp;|&nbsp;
                         @*<a asp-action="Delete" asp-controller="Categories" asp-route-id="@item.ID"><i class="fa-solid fa-trash-can" style="font-size:20px"></i></a>*@
                         <button type="button" class="border-0" onclick="whenClick(@item.ID)"  data-toggle="modal" data-target="#exampleModal"><i class="fa-solid fa-trash-can" style="font-size:20px" ></i></button>                 
                     </div>
