--- a/Views/Products/AdminDetails.cshtml
+++ b/Views/Products/AdminDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model Category
+﻿@model Product
 @{
     ViewData["Title"] = "AdminDetails";
     Layout = "_AdminLayout";
@@ -11,8 +11,8 @@
         <div class="col-lg-7 col-xl-7">
           <div class="product_slider_img">
             <div id="vertical">
-              <div data-thumb="/assets/img/category/@Model.Img">
-                <img src="/assets/img/category/@Model.Img" />
+              <div data-thumb="/assets/img/product/@Model.Img">
+                <img src="/assets/img/product/@Model.Img" />
               </div>
             </div>
           </div>
@@ -22,23 +22,23 @@
             <h3>@Model.Name</h3>
             <ul class="list">
               <li>
-                <a class="active" href="#">
-                                <span class="text-danger">State</span> : @if (@Model.IsActive)
-                                {
-                                   <span>Valid</span> 
-                                }
-                                else
-                                {
-                                    <span>Comming</span>
-                                }
-                            </a>
-                        </li>
+                 <span class="text-danger">Color</span> : @Model.Color
+             </li>
               <li>
-                <a href="#"> <span class="text-danger">Availibility</span> : @Model.IsActive</a>
+                <span class="text-danger">Unit price</span> : @Model.UnitPrice
+              </li>
+              <li>
+                <span class="text-danger">Discount</span> : @Model.Discount
+              </li>
+              <li>
+                <span class="text-danger">Category Name</span> : @Model.Category.Name
+              </li>
+              <li>
+                <span class="text-danger">Description</span> : @Model.Description
               </li>
             </ul>
             <p>
-              @Model.Description
+              
             </p>
           </div>
         </div>
@@ -46,6 +46,8 @@
     </div>
   </div>
   <!--================End Single category Area =================-->
+
+
 
 
 
