--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -8,7 +8,7 @@
 <div class="container ">
 	<h1 class="l font-italic text-muted">Edit Product</h1>
 	<div class="section-top-border">
-		<div class=" row">
+		<div class=" row justify-content-center">
 			<div class="col-lg-8 col-md-8">
 				<form asp-action="Edit" enctype="multipart/form-data">
 					<div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -57,12 +57,12 @@
 							   onblur="this.placeholder = 'Rate'" required class="single-input-secondary">
 						<span asp-validation-for="Rate" class="text-danger"></span>
 					</div>
-					<div class="form-select">
+					<div class=" mt-10">
 						<label asp-for="CategoryID" class="form-label font-italic text-muted"></label>
-						<select asp-for="CategoryID" class="form-control" asp-items="ViewBag.CategoryID"></select>
+						<select asp-for="CategoryID" class="form-control form-select" asp-items="ViewBag.CategoryID"></select>
 						<span asp-validation-for="CategoryID" class="text-danger"></span>
 					</div>
-					<div class="form-group">
+					<div class="form-group mt-5 text-center">
 						<input type="submit" value="Save" class="btn btn-primary" />
 						<a asp-action="Index" class="btn btn-danger">Back to List</a>
 					</div>
